# thesis-ds

./: .gitignore  .llm_request.json.swp  ARCHITECTURE.md  FURTHER CONTRIBUTIONS.md  LICENSE  README.md  chart.tex  llm_request.json  pyproject.toml  pytest.txt  test.py  test.xml  test_orchestrate.py  test_simlp_client.py
configs/: activities.yaml  experiment.yaml
data/ground_truth/msa/: anchoredOrMoored.pl  changingSpeed.pl  drifitng.pl  gap.pl  highSpeedNearCoast.pl  inSar.pl  loitering.pl  lowspeed.pl  movingSpeed.pl  pilotOps.pl  sarMovement.pl  sarSpeed.pl  trawlSpeed.pl  trawling.pl  trawlingMovement.pl  tuggingSpeed.pl
docs/: ARCHITECTURE.md  MEMORY_MODULE.md  RULE_MEMORY.md  SELF_CONSISTENCY.md  fluent-hierarchy.md  setup.md
examples/: run_orchestrator.py  test_orchestrator_mock.py
logs/simlp/: simlp_MSA_gap.md
notebooks/: 1. llm_provider_usage.ipynb  2. simlp_evaluation.ipynb  feedback_loop_usage.ipynb  memory_module_usage.ipynb
results/: results.json
results/har/2025-01-05/gpt-4o/: results.json
results/har/2026-01-26/gpt-4o/: results.json  results.tex
results/har/2026-01-26_21:35:00/gpt-4o/: results.json  results.tex
results/msa/2025-01-05/gpt-4o/: results.json
src/: __init__.py  pipeline.py
src/cli/: __init__.py  main.py  visualize.py
src/core/: __init__.py  models.py  orchestrator.py  rule_memory.py  self_consistency.py
src/feedback/: client.py
src/interfaces/: exceptions.py  llm.py  models.py  prompts.py
src/llm/: __init__.py  factory.py  mock_provider.py  ollama_client.py  openai.py  openai_client.py  provider_base.py  provider_openai.py
src/loop/: __init__.py  logging_config.py  orchestrator.py
src/memory/: __init__.py  rule_memory.py
src/prompts/: __init__.py  builder.py  factory.py  har_builder.py  har_domain.py  har_examples.py  har_requests.py  msa_builder.py  msa_domain.py  msa_examples.py  msa_requests.py  msa_requests.py.bak  rtec_base.py  rtec_policy.py
src/simlp/: README.md  __init__.py  client.py
src/utils/: __init__.py  code_extractor.py  parsers.py  results2latex.py
tests/: conftest.py  test_llm_provider.py  test_loop_orchestrator.py  test_models.py  test_prompt_builder.py  test_prompts.py  test_rule_extraction.py  test_rule_memory.py  test_simlp_client.py
tests/core/: test_self_consistency.py
tests/prompts/: __init__.py  test_base.py  test_factory.py  test_har_builder.py  test_msa_builder.py
tests/utils/: test_code_extractor.py
